// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of edit image cell 1`] = `
Array [
  <img
    style={
      Object {
        "maxWidth": "50px",
      }
    }
  />,
  <i
    className="fa fa-times table-cell-edit-image apm-cursor-p"
    data-testid="table-image-delete"
    onClick={[Function]}
  />,
]
`;

exports[`Edit image cell with a value 1`] = `
Array [
  <img
    src="/foo.jpg"
    style={
      Object {
        "maxWidth": "50px",
      }
    }
  />,
  <i
    className="fa fa-times table-cell-edit-image apm-cursor-p"
    data-testid="table-image-delete"
    onClick={[Function]}
  />,
]
`;
